Header template created

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -7,7 +7,7 @@
             </div>
             <!-- NAVIGATION MENU -->
             <div class="hidden md:flex space-x-10">
-                {% for link in section.settings.settings.menu.links %}
+                {% for link in section.settings.menu.links %}
                     {% if link.links != blank %}
                         <div class="relative">
                             <button class="inline-flex items-center" type="button">
