--- a/templates/list-collections.liquid
+++ b/templates/list-collections.liquid
@@ -7,7 +7,7 @@
             {{ collection_title }}
             &rsaquo;</a>
         {% for product in collection.products limit: 5 %}
-            {% assign grid_item_width = 'large--one-fifth medium--one-half' %}
+            <!-- {% assign grid_item_width = 'large--one-fifth medium--one-half' %} -->
             <div>
                 <a href="{{ product.url | within: collection }}">{{ product.title }}</a>
                 {{ product.price | money }}
