--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -11,6 +11,8 @@
         <!-- Header hook for plugins -->
         {{ 'application.css' | asset_url | stylesheet_tag }}
         <script src="{{ 'application.js' | asset_url }}" defer></script>
+        <script defer src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"></script>
+
     </head>
     <body>
         {% section 'header' %}
