--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,13 +1,25 @@
-<div class="relative bg-white">
+{% if section.settings.menu.links == blank %}
+    {% assign main_menu_linklist = linklists[section.settings.menu].links %}
+{% else %}
+    {% assign main_menu_linklist = section.settings.menu.links %}
+{% endif %}
+
+<div class="relative bg-white" x-data="{ mobileMenuOpen: false }">
     <div class="mx-auto px-4 sm:px-6">
         <div class="flex justify-center items-center py-6 md:justify-start md:space-x-10">
             <!-- STORE NAME / STORE LOGO -->
             <div class="flex justify-start lg:flex-1 truncate">
-                <h1 class="text-x1 font-bold trunate">{{ shop.name }}</h1>
+                <h1 class="text-xl font-bold truncate">{{ shop.name }}</h1>
+            </div>
+
+            <div class="-mr-2 -my-2 ml-3 md:hidden">
+                <button class="bg-white p-2 inline-flex items-center justify-center focus:outline-none" type="button" x-on:click="mobileMenuOpen = true">
+                    {% render 'icon-menu' %}
+                </button>
             </div>
             <!-- NAVIGATION MENU -->
             <nav class="hidden md:flex space-x-10">
-                {% for link in section.settings.menu.links %}
+                {% for link in main_menu_linklist %}
                     {% if link.links != blank %}
                         {% assign link_handle = link.handle | replace: '-', '_' %}
                         <div class="relative" x-data="{ {{ link_handle }}: false }">
@@ -45,7 +57,6 @@
 
                 {% if shop.customer_accounts_enabled %}
                     {% if customer %}
-                        <!-- What we are doing here is replacing <a with <a class="tailwinfcss" -->
                         <a class="text-base text-gray-500 hover:text-gray-900" href="/account">account</a>
                         {{ 'Log out' | customer_logout_link | replace: '<a', '<a class="text-base text-gray-500 hover:text-gray-900"' }}
                     {% else %}
@@ -53,6 +64,58 @@
                         {{ 'Register' | customer_register_link | replace: '<a', '<a class="text-base text-gray-500 hover:text-gray-900"' }}
                     {% endif %}
                 {% endif %}
+            </div>
+
+            <!-- MOBILE MENU CONTAINER -->
+            <div class="absolute z-10 top-0 inset-x-0 p-2 transform origin-top-left md:hidden" x-show="mobileMenuOpen">
+                <div class="shadow-lg rounded-lg ring-1 ring-black ring-opacity-5 bg-white w-full">
+                    <div class="p-5 divide-y-2 divide-gray-50">
+
+                        <!-- MOBILE MENU HEADER TITLE PLUS CLOSE BUTTON -->
+
+                        <div class="flex items-center justify-between pb-3">
+                            <div>
+                                <h1 class="text-lg text-gray-500">{{ section.settings.mobile_menu_title }}</h1>
+                            </div>
+                            <div class="-mr-2">
+                                <button class="bg-white rounded-md p-2 text-gray-500" type="button" x-on:click="mobileMenuOpen = false">
+                                    {% render 'icon-close' %}
+                                </button>
+                            </div>
+                        </div>
+
+                        <!-- NAVIGATION LINKS FOR MOBILE MENU -->
+                        <div class="pt-3">
+                            <nav class="grid gap-y-7">
+                                {% for link in main_menu_linklist %}
+                                    {% if link.links != blank %}
+                                        {% assign mobile_link_handle = link.handle | replace: '-', '_' %}
+                                        <div class="relative" x-data="{ {{ mobile_link_handle }}: false }">
+                                            <button x-on:click="{{ mobile_link_handle }} = ! {{ mobile_link_handle }}" type="button" class="text-base text-gray-500 hover:text-gray-900 flex items-center justify-between w-full">
+                                                <div>{{ link.title }}</div>
+                                                {% render 'icon-dropdown' %}
+                                            </button>
+
+                                            <div x-show="{{ mobile_link_handle }}" class="grid gap-y-7 py-3">
+                                                {% for childlink in link.links %}
+                                                    <a href="{{ childlink.url }}" class="-m-3 p-3 mt-2 flex items-center rounded-md text-gray-500 hover:text-gray-900 hover:bg-gray-50">
+                                                        <span class="ml-3 text-base font-medium text-gray-500">{{ childlink.title }}</span>
+                                                    </a>
+                                                {% endfor %}
+                                            </div>
+                                        </div>
+                                    {% else %}
+                                        <a href="{{ link.url }}" class="-m-3 p-3 flex items-center rounded-md text-gray-500 hover:text-gray-900 hover:bg-gray-50">
+                                            {{ link.title }}
+                                        </a>
+
+                                    {% endif %}
+
+                                {% endfor %}
+                            </nav>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
