--- a/sections/template-article.liquid
+++ b/sections/template-article.liquid
@@ -25,7 +25,7 @@
                     </div>
                 </div>
             {% when 'featured_image' %}
-                <div itemprop="image" class="max-w-7xl bg-blue-100 rounded-lg mx-2 md:mx-auto overflow-hidden my-4">
+                <div class="max-w-7xl bg-blue-100 rounded-lg mx-2 md:mx-auto overflow-hidden my-4" itemprop="image">
                     {% if article.image != blank %}
                         <img class="w-full h-80 md:h-96 object-cover object-center" src="{{ article.image | img_url: 'large'}}" alt="{{ article.image.alt }}">
                     {% else %}
@@ -33,20 +33,20 @@
                         {{ placeholder_image | placeholder_svg_tag: 'w-full h-80 md:h-96 object-cover object-center p-5' }}
                     {% endif %}
                 </div>
-                
+
             {% when 'article_content' %}
                 <div class="flex items-center justify-center">
-                    <div itemprop="articleBody" class="max-w-4xl">
+                    <div class="max-w-4xl" itemprop="articleBody">
                         {{ article.content }}
                     </div>
-                </div> 
+                </div>
             {% else %}
         {% endcase %}
     {% endfor %}
 </article>
 
 {% if blog.comments_enabled? %}
-    <div id="comments" class="my-8">
+    <div class="my-8" id="comments">
         {% if article.comments_count > 0 %}
             <div class="flex-1 items-center justify-center mx-auto max-w-4xl px-4">
                 <h1 class="text-lg mb-4 font-medium">See what people are saying</h1>
@@ -54,7 +54,8 @@
                 {% paginate article.comments by 5 %}
                     {% for comment in article.comments %}
                         <div class="flex-1 border my-4 px-4 py-2 sm:px-6 sm:py-4 leading-relaxed">
-                            <span class="comment-author">{{ comment.author }}</span> <span class="text-xs text-gray-400">{{ comment.created_at | date: format: 'default' }}</span>
+                            <span class="comment-author">{{ comment.author }}</span>
+                            <span class="text-xs text-gray-400">{{ comment.created_at | date: format: 'default' }}</span>
                             <p class="text-sm">{{ comment.content }}</p>
                         </div>
                     {% endfor %}
@@ -65,11 +66,13 @@
                 {% endpaginate %}
             </div>
         {% else %}
-            There are no comments in this article
+            <div class="flex items-center justify-center">
+                There are no comments in this article
+            </div>
         {% endif %}
     </div>
 
-    <div id="comment_form" class="mb-8">
+    <div class="mb-8" id="comment_form">
         {% form 'new_comment', article %}
             <div class="flex-1 mx-auto items-center justify-center max-w-4xl px-4">
                 {% if form.errors %}
@@ -101,37 +104,23 @@
 
                 <div class="px-1 md:flex mb-3">
                     <div class="px-3 md:w-1/2">
-                        <label for="comment_author" class="text-gray-700 font-medium uppercase text-xs mb-2">Name</label>
-                        <input 
-                            type="text" 
-                            name="comment[author]" 
-                            id="comment_author" 
-                            class="w-full text-gray-700 border py-3 px-4 mb-3 focus:outline-none"
-                            placeholder="Jane Doe"
-                            required
-                        >
+                        <label class="text-gray-700 font-medium uppercase text-xs mb-2" for="comment_author">Name</label>
+                        <input class="w-full text-gray-700 border py-3 px-4 mb-3 focus:outline-none" id="comment_author" name="comment[author]" placeholder="Jane Doe" required type="text">
                     </div>
                     <div class="px-3 md:w-1/2">
-                        <label for="comment_email" class="text-gray-700 font-medium uppercase text-xs mb-2">Email</label>
-                        <input 
-                            type="email" 
-                            name="comment[email]" 
-                            id="comment_email" 
-                            class="w-full text-gray-700 border py-3 px-4 mb-3 focus:outline-none"
-                            placeholder="jane@doe.com"
-                            required
-                        >
+                        <label class="text-gray-700 font-medium uppercase text-xs mb-2" for="comment_email">Email</label>
+                        <input class="w-full text-gray-700 border py-3 px-4 mb-3 focus:outline-none" id="comment_email" name="comment[email]" placeholder="jane@doe.com" required type="email">
                     </div>
                 </div>
                 <div class="px-1 md:flex mb-3">
                     <div class="md:w-full px-3">
-                        <label for="comment_content" class="text-gray-700 font-medium uppercase text-xs mb-2">Comment</label>
-                        <textarea class="w-full text-gray-700 resize-none h-20 py-2 px-3 focus:outline-none border" name="comment[body]" id="comment_content" required></textarea>
+                        <label class="text-gray-700 font-medium uppercase text-xs mb-2" for="comment_content">Comment</label>
+                        <textarea class="w-full text-gray-700 resize-none h-20 py-2 px-3 focus:outline-none border" id="comment_content" name="comment[body]" required></textarea>
                     </div>
                 </div>
                 <div class="px-1 md:flex mb-3">
                     <div class="md:w-full px-3">
-                        <input type="submit" class="w-full cursor-pointer px-4 py-2 border text-base font-medium text-white bg-gray-900 hover:bg-gray-500" value="Post comment">
+                        <input class="w-full cursor-pointer px-4 py-2 border text-base font-medium text-white bg-gray-900 hover:bg-gray-500" type="submit" value="Post comment">
                     </div>
                 </div>
             </div>
@@ -140,30 +129,18 @@
 {% endif %}
 
 <script type="application/ld+json">
-{
-    "@context": "http://schema.org",
-    "@type": "BlogPosting",
-    "headline": {{ article.title | json }},
-    "articleBody": {{ article.content | strip_html | json }},
-    {% if article.excerpt != blank %}
-        "description": {{ article.excerpt | strip_html | json }},
-    {% endif %}
-    {% if article.image %}
-        "image": [
-            {{ article.image | img_url: "medium" | prepend: 'https:' | json }} 
-        ],
-    {% endif %}
-    "datePublished": {{ article.published_at | date: format: "default" | json }},
-    "dateCreated": {{ article.created_at | date: format: "default" | json }},
-    "author": {
-        "@type": "Person",
-        "name": {{ article.author | json }}
-    },
-    "publisher": {
-        "@type": "Organization",
-        "name": {{ shop.name | json }}
-    }
-}
+
+[36mLine: 1[0m
+[31m{[0m
+[31m    "@context": "http://schema.org",[0m
+[31m    "@type": "BlogPosting",[0m
+[31m    "headline": {{ article.title | json }},[0m
+[31m    "articleBody": {{ article.content | strip_html | json }},{% if article.excerpt != blank %}[0m
+[31m        "description" : {{ article.excerpt | strip_html | json }},{% endif %}[0m
+[31m    {% if article.image %}[0m
+
+[36mLine: 21[0m
+[32m(empty line)[0m
 </script>
 
 {% schema %}
