--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,4 +1,4 @@
-div class="relative bg-white" x-data="{ mobileMenuOpen: false }">
+<div class="relative bg-white" x-data="{ mobileMenuOpen: false }">
     <div class="mx-auto px-4 sm:px-6">
         <div class="flex justify-center items-center py-6 md:justify-start md:space-x-10">
             <!-- STORE NAME / STORE LOGO -->
@@ -7,7 +7,7 @@ div class="relative bg-white" x-data="{ mobileMenuOpen: false }">
             </div>
 
             <div class="-mr-2 -my-2 ml-3 md:hidden">
-                <button x-on:click="mobileMenuOpen = true" type="button" class="bg-white p-2 inline-flex items-center justify-center focus:outline-none">
+                <button class="bg-white p-2 inline-flex items-center justify-center focus:outline-none" type="button" x-on:click="mobileMenuOpen = true">
                     {% render 'icon-menu' %}
                 </button>
             </div>
@@ -27,14 +27,7 @@ div class="relative bg-white" x-data="{ mobileMenuOpen: false }">
                                 {% render 'icon-dropdown' %}
                             </button>
 
-                            <div 
-                            x-transition:enter="transition ease-out duration-300"
-                            x-transition:enter-start="opacity-0 translate-y-3"
-                            x-transition:enter-end="opacity-100 translate-y-0"
-                            x-transition:leave="transition ease-out duration-300"
-                            x-transition:leave-start="opacity-100 translate-y-0"
-                            x-transition:leave-end="opacity-0 translate-y-3"
-                            x-show="{{ link_handle }}" @click.away="{{ link_handle }} = false" class="absolute z-10 -ml-5 mt-5 transform px-2 w-screen max-w-md sm:px-0 lg:ml-0 lg:left-1/2 lg:-translate-x-1/2">
+                            <div x-transition:enter="transition ease-out duration-300" x-transition:enter-start="opacity-0 translate-y-3" x-transition:enter-end="opacity-100 translate-y-0" x-transition:leave="transition ease-out duration-300" x-transition:leave-start="opacity-100 translate-y-0" x-transition:leave-end="opacity-0 translate-y-3" x-show="{{ link_handle }}" @click.away="{{ link_handle }} = false" class="absolute z-10 -ml-5 mt-5 transform px-2 w-screen max-w-md sm:px-0 lg:ml-0 lg:left-1/2 lg:-translate-x-1/2">
                                 <div class="shadow-lg border ring-black ring-opacity-5 overflow-hidden rounded-lg">
                                     <div class="relative grid gap-6 bg-white px-5 py-6 sm:gap-8 sm:p-8">
                                         {% for childlink in link.links %}
@@ -73,7 +66,7 @@ div class="relative bg-white" x-data="{ mobileMenuOpen: false }">
             </div>
 
             <!-- MOBILE MENU CONTAINER -->
-            <div x-show="mobileMenuOpen" class="absolute z-10 top-0 inset-x-0 p-2 transform origin-top-left md:hidden">
+            <div class="absolute z-10 top-0 inset-x-0 p-2 transform origin-top-left md:hidden" x-show="mobileMenuOpen">
                 <div class="shadow-lg rounded-lg ring-1 ring-black ring-opacity-5 bg-white w-full">
                     <div class="p-5 divide-y-2 divide-gray-50">
 
@@ -84,7 +77,7 @@ div class="relative bg-white" x-data="{ mobileMenuOpen: false }">
                                 <h1 class="text-lg text-gray-500">{{ section.settings.mobile_menu_title }}</h1>
                             </div>
                             <div class="-mr-2">
-                                <button x-on:click="mobileMenuOpen = false" type="button" class="bg-white rounded-md p-2 text-gray-500">
+                                <button class="bg-white rounded-md p-2 text-gray-500" type="button" x-on:click="mobileMenuOpen = false">
                                     {% render 'icon-close' %}
                                 </button>
                             </div>
@@ -100,7 +93,7 @@ div class="relative bg-white" x-data="{ mobileMenuOpen: false }">
                                 {% endif %}
                                 {% for link in main_menu_linklist %}
                                     {% if link.links != blank %}
-                                    {% assign mobile_link_handle = link.handle | replace: '-', '_' %}
+                                        {% assign mobile_link_handle = link.handle | replace: '-', '_' %}
                                         <div class="relative" x-data="{ {{ mobile_link_handle }}: false }">
                                             <button x-on:click="{{ mobile_link_handle }} = ! {{ mobile_link_handle }}" type="button" class="text-base text-gray-500 hover:text-gray-900 flex items-center justify-between w-full">
                                                 <div>{{ link.title }}</div>
@@ -121,7 +114,7 @@ div class="relative bg-white" x-data="{ mobileMenuOpen: false }">
                                         </a>
 
                                     {% endif %}
-                                    
+
                                 {% endfor %}
                             </nav>
                         </div>
