--- a/sections/template-collection.liquid
+++ b/sections/template-collection.liquid
@@ -1,79 +1,41 @@
-<div class="flex flex-col items-center my-8">
-    {% if section.settings.title != blank %}
-        <h1 class="text-3xl font-medium my-8 md:my-16">{{ section.settings.title }}</h1>
-    {% endif %}
+<div class="px-4 py-8">
+    {% paginate collection.products by 6 %}
+        <h1 class="text-3xl text-center">{{ collection.title }}</h1>
 
-    {% form 'contact' %}
+        <div class="max-w-6xl mx-auto">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+                {% for product in collection.products %}
+                    <div class="w-full py-6 px-3">
+                        <div class="border bg-white shadow-lg rounded-lg overflow-hidden">
+                            <a href="{{ product.url }}">
+                                {% if product.featured_image %}
+                                    <div class="h-80 overflow-hidden">
+                                        <img class="w-full h-full object-cover" src="{{ product.featured_image | img_url: 'medium' }}" alt="{{ product.featured_image.alt }}">
+                                    </div>
 
-        {% if form.errors %}
-            <div class="border p-5">
-                <div class="flex flex-row items-center w-full my-3">
-                    <div class="text-red-500">
-                        {% render 'icon-failed' %}
+                                {% else %}
+                                    {{ 'product-1' | placeholder_svg_tag: 'w-full h-full object-cover bg-gray-100' }}
+                                {% endif %}
+                            </a>
+
+                            <div class="flex flex-col p-4">
+                                <span class="text-sm text-gray-400">{{ product.vendor }}</span>
+
+                                <a href="{{ product.url }}" class="text-gray-700 uppercase font-medium">{{ product.title }}</a>
+
+                                <p class="text-gray-500">{{ product.price | money }}</p>
+                            </div>
+
+                        </div>
                     </div>
-                    <div class="text-sm font-medium ml-3">
-                        Oh no! Your message is not sent
-                    </div>
-                </div>
-                <ul class="px-4 mb-3 ml-7 list-decimal">
-                    {% for error in form.errors %}
-                        <li>
-                            <span>{{ form.errors.messages[error] }}</span>
-                        </li>
-                    {% endfor %}
-                </ul>
-            </div>
-        {% elsif form.posted_successfully? %}
-            <div class="flex flex-row items-center w-full my-3 p-5">
-                <div class="text-green-500">
-                    {% render 'icon-success' %}
-                </div>
-                <div class="text-sm font-medium ml-3">Your message is sent successfully</div>
-            </div>
-        {% endif %}
 
-        <div class="max-w-6xl mx-auto justify-center flex-1 items-center px-4">
-            <div class="flex px-1 mb-3">
-                <div class="px-3 md:w-1/2">
-                    <label class="uppercase text-xs text-gray-500 font-medium" for="contact_name">Name</label>
-                    <input class="border py-3 px-4 mb-3 text-gray-700 w-full" id="contact_name" name="contact[name]" type="text">
-                </div>
-                <div class="px-3 md:w-1/2">
-                    <label class="uppercase text-xs text-gray-500 font-medium" for="contact_email">Email address</label>
-                    <input class="border py-3 px-4 mb-3 text-gray-700 w-full" id="contact_email" name="contact[email]" type="email">
-                </div>
-            </div>
-
-            <div class="flex px-1 mb-3">
-                <div class="w-full px-3">
-                    <label class="uppercase text-xs text-gray-500 font-medium" for="contact_message">Message</label>
-                    <textarea class="border py-3 px-4 mb-3 text-gray-700 w-full" id="contact_message" name="contact[body]"></textarea>
-                </div>
-            </div>
-
-            <div class="flex px-1 mb-3">
-                <div class="w-full px-3">
-                    <input class="w-full cursor-pointer px-4 py-2 border text-base font-medium bg-gray-900 text-white hover:bg-gray-700" type="submit" value="Submit message">
-                </div>
+                {% else %}
+                    <p>There are no products inside of this collection</p>
+                {% endfor %}
             </div>
         </div>
-    {% endform %}
-</div>
 
-{% schema %}
-{
-    "name": "Contact Form",
-    "settings": [
-        {
-            "type": "text",
-            "id": "title",
-            "label": "Title"
-        }
-    ],
-    "presets": [
-        {
-            "name": "Contact Form"
-        }
-    ]
-}
-{% endschema %}
+
+        {% render 'pagination', pagination: paginate %}
+    {% endpaginate %}
+</div>
