--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,4 +1,4 @@
-<div class="relative bg-white" x-data="{ mobileMenuOpen: false }">
+<div class="relative bg-white" x-data="{ mobileMenuOpen: false, searchBarOpen: false }">
     <div class="mx-auto px-4 sm:px-6">
         <div class="flex justify-center items-center py-6 md:justify-start md:space-x-10">
             <!-- STORE NAME / STORE LOGO -->
@@ -50,6 +50,9 @@
             </nav>
             <!-- CART BUTTON / ACCOUNT LINKS IF ENABLED -->
             <div class="hidden md:flex items-center justify-end md:flex-1 space-x-5">
+                <button class="whitespace-nowrap text-base text-gray-500 hover:text-gray-900" type="button" x-on:click="searchBarOpen = true">
+                    {% render 'icon-search' %}
+                </button>
                 <a href="{{ routes.cart_url }}" class="whitespace-nowrap text-base text-gray-500 hover:text-gray-900">
                     {% render 'icon-shopping-bag' %}
                 </a>
@@ -121,6 +124,22 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div class="w-full absolute top-0 bg-white border" x-show="searchBarOpen">
+        <button class="absolute top-0 right-0 mr-5 mt-5 text-gray-500" type="button" x-on:click="searchBarOpen = false">
+            {% render 'icon-close' %}
+        </button>
+        <div class="h-40 flex justify-center items-center">
+            <form action="{{ routes.search_url }}" method="get" class="flex-auto">
+                <div class="relative text-gray-500 px-10 border">
+                    <input class="w-full bg-white h-10 px-5 pr-10 rounded-full text-sm focus:outline-none" name="q" placeholder="Search" type="search">
+                    <button class="absolute right-0 top-0 mt-2 mr-2 md:mr-20" type="submit">
+                        {% render 'icon-search' %}
+                    </button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
